--- a/package.json
+++ b/package.json
@@ -59,5 +59,5 @@
     "@typescript-eslint/parser": "^5.52.0",
     "typescript": "^4.9.5"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "https://ris-app.herokuapp.com"
 }
