--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
       {
         "source": "/api/(.*)", 
-        "destination": "https://ris-app.herokuapp.com/$1"
+        "destination": "https://ris-app-server.herokuapp.com/$1"
       },
       {
         "source": "/(.*)",
