--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.29",
     "moment": "^2.29.4",
+    "pdf-lib": "^1.17.1",
     "rc-slider": "^10.1.1",
     "rc-tooltip": "^6.0.1",
     "react": "^18.2.0",
@@ -61,5 +62,4 @@
     "@typescript-eslint/parser": "^5.52.0",
     "typescript": "^4.9.5"
   }
- 
 }
