--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.17.1",
     "fs": "^0.0.1-security",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.29",
     "moment": "^2.29.4",
