--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.0",
     "react-yandex-maps": "^4.6.0",
+    "shortid": "^2.2.16",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
