--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "classnames": "^2.3.2",
+    "docxtemplater": "^3.39.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.17.1",
     "fs": "^0.0.1-security",
@@ -23,6 +24,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.29",
     "moment": "^2.29.4",
+    "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "rc-slider": "^10.1.1",
     "rc-tooltip": "^6.0.1",
