--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/lab": "^6.0.0-beta.16",
     "@mui/material": "^5.12.2",
     "@mui/styles": "^5.13.1",
     "@mui/x-data-grid": "^5.17.23",
     "@mui/x-data-grid-generator": "^5.17.23",
     "@mui/x-data-grid-pro": "^5.17.23",
+    "@tabler/icons-react": "^3.26.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
