--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/x-data-grid": "^5.17.23",
     "@mui/x-data-grid-generator": "^5.17.23",
     "@mui/x-data-grid-pro": "^5.17.23",
+    "@mui/x-tree-view": "^7.26.0",
     "@tabler/icons-react": "^3.26.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
