--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^6.2.1",
+    "@mui/icons-material": "^7.1.1",
     "@mui/lab": "^6.0.0-beta.16",
-    "@mui/material": "^5.12.2",
+    "@mui/material": "^7.1.1",
     "@mui/styles": "^5.13.1",
     "@mui/x-data-grid": "^5.17.23",
     "@mui/x-data-grid-generator": "^5.17.23",
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "classnames": "^2.3.2",
+    "css-loader": "^7.1.2",
     "docx": "^8.2.2",
     "docxtemplater": "^3.39.0",
     "file-saver": "^2.0.5",
@@ -35,11 +36,14 @@
     "rc-tooltip": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.57.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
     "react-tabs": "^6.0.0",
     "react-yandex-maps": "^4.6.0",
     "shortid": "^2.2.16",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
@@ -52,8 +56,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
